# insecure

./: Cargo.toml  LICENSE  README.md
.cargo/: config
src/: ddl_create.sql  ddl_insert.sql  main.rs
src/page/: home.html  login.html
